[project]
name = "qwen-image-integrated-ksampler"
description = "Qwen Image Integrated KSampler - Github: https://github.com/luguoli - ComfyUI custom node for integrated Qwen image sampling, supporting text-to-image and image-to-image modes with advanced features like CFG normalization, AuraFlow shift, and memory management."
version = "1.0.6"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["torch", "numpy>=1.25.0", "transformers>=4.37.2", "tokenizers>=0.13.3", "sentencepiece", "safetensors>=0.4.2", "einops", "Pillow", "psutil"]

[project.urls]
Repository = "https://github.com/luguoli/ComfyUI-Qwen-Image-Integrated-KSampler"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/luguoli/ComfyUI-Qwen-Image-Integrated-KSampler/blob/main/README.md"
"Bug Tracker" = "https://github.com/luguoli/ComfyUI-Qwen-Image-Integrated-KSampler/issues"

[tool.comfy]
PublisherId = "luguoli"
DisplayName = "ComfyUI-Qwen-Image-Integrated-KSampler"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility